feat: adiciona suporte a filtragem por data na listagem de serviços
